--- a/public/assets/css/templatemo-digimedia-v2.css
+++ b/public/assets/css/templatemo-digimedia-v2.css
@@ -1932,7 +1932,7 @@ Footer Style
 */
 
 footer {
-  background-image: url(../images/footer-bg-v2.jpg);
+  background-image: url(../images/BackGround-2.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
